# concurrentes

./: README.md
parciales/: Cargo.toml
parciales/examples/: barrier_condvar.rs  semaforo_convdar.rs  sensores.rs  server-async.rs  sitios.rs  streams.rs
practicas/3-async/: Cargo.toml
tp1/: Cargo.toml  README.md  download_data.sh
tp1/data_test/: academia.stackexchange.com.jsonl  askubuntu.com.jsonl
tp1/src/: lib.rs  main.rs
tp1/src/error/: mod.rs
tp2/: .gitignore  README.md
tp2/payments/: Cargo.toml
tp2/payments/src/: main.rs  payments.rs
tp2/payments/src/payments/: codec.rs  container.rs  errors.rs  gateway.rs  get_orders.rs  message_parser.rs  messages.rs  order.rs  random_rejection.rs  stop_gateway.rs
tp2/robots/: Cargo.toml
tp2/robots/conf/: README.md  properties.conf
tp2/robots/src/: lib.rs  main.rs  messages.rs  orders.rs  robots.rs
tp2/robots/src/leader_election/: ring.rs
tp2/robots/src/messages/: cancel_payment.rs  capture_payment.rs  coordinator.rs  election.rs  finish_payment.rs  flavour_released.rs  message.rs  new_leader.rs  new_order.rs  new_pending_order.rs  order_done.rs  payment_accepted.rs  payment_declined.rs  ping.rs  token_ring.rs
tp2/robots/src/orders/: container.rs  flavours.rs  order.rs
tp2/robots/src/robots/: codec.rs  election.rs  errors.rs  find_next.rs  init.rs  order.rs  payment.rs  ping_robots.rs  robot.rs
tp2/robots/src/utils/: log.rs  util.rs
tp2/robots/test-files/: order_payments_declined.jsonl
tp2/robots/tests/: flavours_after_order.rs
tp2/screen/: Cargo.toml
tp2/screen/conf/: screen.properties
tp2/screen/orders/: order1.jsonl  order3.jsonl
tp2/screen/src/: lib.rs  main.rs  screens.rs
tp2/screen/src/screens/: container.rs  errors.rs  new_leader.rs  new_order.rs  order.rs  recv_screen.rs  send_screen.rs
tp2/screen/src/utils/: util.rs
(+13 files in other folders)
