[package]
name = "parciales"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
async-std = "1.12.0"
rayon = "1.10.0"
rand = "0.9.0-alpha.1"
