[package]
name = "payments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
tokio = "1.38.0"
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
rand = "0.9.0-alpha.1"
tokio-util = "0.7.11"
bytes = "1.6.0"