[package]
name = "robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
tokio-util = "0.7.11"
bytes = "1.6.0"
futures = "0.3.15"
serde_json = "1.0"
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4.4"