[package]
name = "screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempdir = "0.3.7"
actix = "0.13.5"
actix-rt = "2.10.0"
tokio = "1.38.0"
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
serde_json = "1.0"
serde = { version = "1.0.203", features = ["derive"] }
async-std = "1.12.0"
tokio-util = "0.7.11"

